DB gérer par flyway (hibernate off)
V1 pour la structure, V2 pour peupler

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,11 +35,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #   'update': Essaie de modifier le schéma BDD pour correspondre aux entités. RISQUÉ.
 #   'create': Supprime et recrée le schéma à chaque démarrage. PERTE DE DONNÉES.
 #   'create-drop': Comme 'create', mais supprime tout à l'arrêt. PERTE DE DONNÉES.
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=none
 
 # Flyway configuration
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
 logging.level.org.flywaydb=DEBUG
