--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,6 +39,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 # Flyway configuration
 spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
 logging.level.org.flywaydb=DEBUG
