--- a/frontend/DockerFile
+++ b/frontend/DockerFile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Installer les dépendances (cela permet de mettre en cache npm install)
-RUN npm install --legacy-peer-deps
+RUN npm install
 
 # Copier le reste de l'application
 COPY . .
