--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0",
-    "bootstrap": "^5.3.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/angular-fontawesome": "^0.12.1"
+    "bootstrap": "^5.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.6",
